2013-01-22  Joseph Pecoraro  <pecoraro@apple.com>

        [Mac] Enable Page Visibility (PAGE_VISIBILITY_API)
        https://bugs.webkit.org/show_bug.cgi?id=107230

        Reviewed by David Kilzer.

        * DumpRenderTree/mac/TestRunnerMac.mm:
        (TestRunner::resetPageVisibility):
        Fix a typo in the original implementation. resetPageVisibility should
        pass initialState YES so an event is not dispatched, which causes
        issues in multiple tests. This now matches other ports.

2013-01-22  Zan Dobersek  <zandobersek@gmail.com>

        [GTK] Enable CSS Image Orientation feature
        https://bugs.webkit.org/show_bug.cgi?id=99040

        Reviewed by Martin Robinson.

        Enable the CSS Image Orientation feature in the development
        builds of the GTK port. The feature is still disabled in the release
        builds.

        * Scripts/webkitperl/FeatureList.pm:

2013-01-22  Zan Dobersek  <zandobersek@gmail.com>

        [GTK] Enable the <template> element support in development builds
        https://bugs.webkit.org/show_bug.cgi?id=106575

        Reviewed by Martin Robinson.

        Enable the <template> element support in the development builds of the GTK port.

        * Scripts/webkitperl/FeatureList.pm:

2013-01-22  Zan Dobersek  <zandobersek@gmail.com>

        Prettify the output of the override-feature-defines script
        https://bugs.webkit.org/show_bug.cgi?id=106542

        Reviewed by Martin Robinson.

        The output now clearly lists the feature defines being overridden
        along with the default and overriding values for each feature define.

        * gtk/override-feature-defines:
        (adjust_feature_defines_makefile):
        (adjust_feature_defines_makefile.override_feature_define):

2013-01-22  Zan Dobersek  <zdobersek@igalia.com>

        Remove uses of deprecated unittest.TestCase aliases
        https://bugs.webkit.org/show_bug.cgi?id=102252

        Reviewed by Adam Barth.
